# multilookupdict

./: .gitignore  README.md  pyproject.toml
multilookupdict/: __init__.py  multilookupdict.py
tests/: test_multilookupdict.py
