[tool.poetry]
name = "multilookupdict"
version = "0.1.0"
description = "A dict-like container that allows multiple keys to address the same value."
authors = ["Richard Hadden <richard.hadden@oeaw.ac.at>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/richardhadden/multilookupdict"
repository = "https://github.com/richardhadden/multilookupdict"
keywords = ["container", "lookup", "multi"]
classifiers = [
    "Development Status :: 4 - Beta"
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
